feat: expose demo, template, and modes pages

--- a/index.html
+++ b/index.html
@@ -809,6 +809,13 @@
                     <p>Use clear, actionable insights to guide your purchasing, planning, or strategy.</p>
                 </div>
             </div>
+            <p style="text-align: center; margin-top: 48px;">
+                <a href="demo-product.html" style="color: #4b5563; font-size: 15px; text-decoration: none; border-bottom: 1px solid #d1d5db;">View Demo Product Report →</a>
+                <span style="margin: 0 16px; color: #d1d5db;">|</span>
+                <a href="product-template.html" style="color: #4b5563; font-size: 15px; text-decoration: none; border-bottom: 1px solid #d1d5db;">View Product Intelligence Template →</a>
+                <span style="margin: 0 16px; color: #d1d5db;">|</span>
+                <a href="modes.html" style="color: #4b5563; font-size: 15px; text-decoration: none; border-bottom: 1px solid #d1d5db;">View Product Intelligence Modes →</a>
+            </p>
         </div>
     </section>
 
