feat: expose monetisation page

--- a/index.html
+++ b/index.html
@@ -815,6 +815,8 @@
                 <a href="product-template.html" style="color: #4b5563; font-size: 15px; text-decoration: none; border-bottom: 1px solid #d1d5db;">View Product Intelligence Template →</a>
                 <span style="margin: 0 16px; color: #d1d5db;">|</span>
                 <a href="modes.html" style="color: #4b5563; font-size: 15px; text-decoration: none; border-bottom: 1px solid #d1d5db;">View Product Intelligence Modes →</a>
+                <span style="margin: 0 16px; color: #d1d5db;">|</span>
+                <a href="monetisation.html" style="color: #4b5563; font-size: 15px; text-decoration: none; border-bottom: 1px solid #d1d5db;">View Monetisation & Revenue Model →</a>
             </p>
         </div>
     </section>
