--- a/use-cases.html
+++ b/use-cases.html
@@ -434,8 +434,15 @@
         </div>
     </header>
 
+    <!-- MVP Banner -->
+    <div style="background: #fef3c7; border-bottom: 1px solid #fcd34d; padding: 12px 0; text-align: center; margin-top: 72px;">
+        <div class="container">
+            <p style="font-size: 14px; color: #92400e; font-weight: 500; margin: 0;">📋 <strong>MVP Proof-of-Concept</strong> — This page demonstrates how Product Intelligence serves different user types.</p>
+        </div>
+    </div>
+
     <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header" style="padding-top: 60px;">
         <div class="container">
             <h1>Product Intelligence for Every Decision</h1>
             <p>One intelligence platform. Three ways to use it — depending on who you are and what decision you need to make.</p>
