--- a/demo-product.html
+++ b/demo-product.html
@@ -587,6 +587,13 @@
         </div>
     </header>
 
+    <!-- MVP Banner -->
+    <div style="background: #fef3c7; border-bottom: 1px solid #fcd34d; padding: 12px 0; text-align: center;">
+        <div class="container">
+            <p style="font-size: 14px; color: #92400e; font-weight: 500; margin: 0;">📋 <strong>MVP Demo Report</strong> — This is a static example showing the Product Intelligence report structure.</p>
+        </div>
+    </div>
+
     <!-- Report Header -->
     <section class="report-header">
         <div class="container">
