--- a/product-template.html
+++ b/product-template.html
@@ -318,6 +318,13 @@
         </div>
     </header>
 
+    <!-- MVP Banner -->
+    <div style="background: #fef3c7; border-bottom: 1px solid #fcd34d; padding: 12px 0; text-align: center;">
+        <div class="container">
+            <p style="font-size: 14px; color: #92400e; font-weight: 500; margin: 0;">📋 <strong>MVP Proof-of-Concept</strong> — This page explains the structured template used for all Product Intelligence reports.</p>
+        </div>
+    </div>
+
     <!-- Hero -->
     <section class="hero">
         <div class="container">
